package com.rezahdrm.structural.adapter;

public class UserDAO {

    public void save(User user) {
        System.out.println("Save");
    }

    public void update(User user) {
        System.out.println("Update");
    }

    public void delete(User user) {
        System.out.println("Delete");
    }
}
